# templete_web_system

./: .gitignore  CLAUDE.md  README.md  claude-tmux.md  docker-compose.prod.yml  docker-compose.yml  メモ.txt
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue_template.md
.github/workflows/: github-actions_backend_pytest.yml  github-actions_backend_sa.yml  github-actions_frontend.yml  github-actions_frontend_prettier_eslint.yml
apps/: Dockerfile
apps/backend/: main.py
apps/backend/alembic/: env.py  script.py.mako
apps/backend/app/: routes.py
apps/e2e/: CLAUDE.md  cypress.config.js
apps/frontend/: .prettierrc  package-lock.json  tsconfig.json  vite.config.ts
backend/: .env.example  .gitguardian.yaml  CLAUDE.md  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 97337ec4b949_initial_migration.py
backend/api/common/: common.py  database.py  exception_handlers.py  response_schemas.py  setting.py  test_data.py
backend/api/common/core/: http_exception_handler.py  log_config.py  request_validation_error.py
backend/api/common/middleware/: __init__.py  add_userIP_middleware.py  error_handler_middleware.py
backend/api/tests/: conftest.py
backend/api/tests/fixtures/: authenticate_fixture.py  db_fixture.py  logging_fixture.py  mock_db_fixture.py  mock_email_fixture.py  sqlite_models.py  sqlite_seed_data.py
backend/api/tests/v1/features/feature_auth/: test_auth_controller.py
backend/api/tests/v1/features/feature_auth/unit/: test_crud.py  test_email_sending.py  test_exception_handlers.py  test_response_schemas.py  test_route_utils.py  test_security.py
backend/api/v1/: main.py
backend/api/v1/common/: exception_handlers.py  response_schemas.py  setting.py
backend/api/v1/common/core/: http_exception_handler.py  log_config.py  request_validation_error.py
backend/api/v1/common/middleware/: add_userIP_middleware.py  error_handler_middleware.py
backend/api/v1/features/feature_auth/: auth_controller.py  auth_repository.py  auth_service.py  crud.py  route.py  security.py  send_reset_password_email.py  send_verification_email.py  service.py
backend/api/v1/features/feature_auth/models/: user.py
backend/api/v1/features/feature_auth/schemas/: user.py
backend/api/v1/features/feature_dev/: dev_controller.py  route.py  seed_data.py  seed_user.py
backend/api/v1/routes/: auth.py  dev.py  health.py  users.py
backend/api/v1/tests/: conftest.py
backend/api/v1/tests/features/feature_auth/: test_auth_controller.py
backend/api/v1/tests/features/feature_auth/unit/: test_security.py
backend/api/v1/tests/fixtures/: authenticate_fixture.py  db_fixture.py  logging_fixture.py
backend/app/api/: deps.py
backend/app/api/v1/: crud.py  models.py  routes.py
backend/app/api/v1/common/: database.py  setting.py
backend/app/api/v1/common/core/: http_exception_handler.py  log_config.py
backend/app/api/v1/common/middleware/: __init__.py
backend/app/api/v1/core/: compat.py  config.py  db.py  security.py
backend/app/api/v1/endpoints/: auth.py  dev.py
backend/app/api/v1/features/feature_auth/: auth_controller.py  auth_repository.py  auth_service.py  security.py
backend/app/api/v1/features/feature_auth/schemas/: user.py
backend/app/api/v1/features/feature_dev/: dev_controller.py  seed_data.py  seed_user.py
backend/app/api/v1/models_legacy/: __init__.py
backend/app/api/v1/routes/: auth.py  dev.py  health.py  users.py
backend/app/common/: setting.py
backend/app/features/feature_auth/: auth_repository.py  security.py  send_verification_email.py
backend/app/features/feature_dev/: dev_controller.py
backend/tests/features/feature_auth/: test_auth_controller.py
backend/tests/features/feature_auth/unit/: test_security.py
backend/tests/fixtures/: authenticate_fixture.py  db_fixture.py
claude/: claude-tmux_member.md  claude-tmux_pm.md  task.md  要件定義.md
claude/memo/: Claude手順  tmux基本コマンド  メモ.txt
cypress/: CLAUDE.md  Dockerfile  run-tests.sh
frontend/: .env.example  .eslintrc.cjs  .gitignore  CLAUDE.md  Dockerfile  package-lock.json  package.json  react-router.config.ts  tailwind.config.ts  tsconfig.ci.json  tsconfig.json  vite.config.ts
frontend/app/: entry.client.tsx  entry.server.tsx  root.tsx  routes.ts
frontend/certs/: readme.md
infrastructure/docker/: backend.Dockerfile  e2e.Dockerfile  frontend.Dockerfile
(+153 files in other folders)
